# phoenix_robot

./: .env.example  .gitignore  README.md  speed_calculations.md
Local_MQTT/: robot_integration.py  robot_sub.py  vision_node.py
Phoenix_Web_Command_Center/: index.html
ambers_ws/src/phoenix_control/: package.xml  setup.py
ambers_ws/src/phoenix_control/phoenix_control/: lidar_publisher.py  motor_controller.py  mqtt_nav_client.py  pump_controller.py
ambers_ws/src/phoenix_description/: CMakeLists.txt  package.xml
ambers_ws/src/phoenix_description/config/: nav2_params.yaml
ambers_ws/src/phoenix_description/launch/: display.launch.py  gazebo.launch.py
ambers_ws/src/phoenix_description/urdf/: phoenix.urdf
ambers_ws/src/phoenix_description/worlds/: warehouse.sdf
docs/: useful_commands.md
scripts/: build_all.sh  build_sim.sh  launch_display.sh  launch_gazebo.sh  launch_nav2.sh  launch_rviz_nav2.sh  pi_thermal.py  run_teleop.sh  save_map.sh  start_pi_camera_stream.sh  start_slam.sh
vision_node/: Base_to_Survalience_kinematics.py  Base_to_Surveillance_kinematics.py  Fire_detection_model.ipynb  Vision.py  fire_detection_model_fixed.pt  requirements.txt
vision_node/Fire_Detection_Raspberry_Pi/: Fire_Detection_Raspberry_Pi.py
vision_node/Fire_Detection_TapoC210/: Fire_detection_model.ipynb  fire_detection_model.pt
vision_node/Human_Detection/: Human_Detection.py
vision_node/fire_detection_model.pt/fire_detection_model/: data.pkl
vision_node/fire_detection_model.pt/fire_detection_model/.data/: serialization_id
(+10 files in other folders)
